--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "author": "LeDevNovice",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.10.2",
     "typescript": "^5.3.2"
-  },
-  "dependencies": {
-    "@types/node": "^20.10.2"
   }
 }
