--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.10.2",
+    "prettier": "^3.1.0",
     "typescript": "^5.3.2"
   }
 }
