--- a/package.json
+++ b/package.json
@@ -8,16 +8,31 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint . --ext .ts",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\""
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "test": "jest"
   },
   "author": "LeDevNovice",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.10",
     "@types/node": "^20.10.2",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.55.0",
+    "jest": "^29.7.0",
     "prettier": "^3.1.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.2"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testMatch": [
+      "<rootDir>/src/**/*.spec.ts"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "node"
+    ]
   }
 }
